Added scss config, first styles for search, divede into components

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CodersLab</title>
+    <title>Movie browser</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="styles-temp.css"> -->
 </head>
 <body>
     <div id="app"></div>
